--- a/app/scss/base/_colors.scss
+++ b/app/scss/base/_colors.scss
@@ -80,4 +80,16 @@
   --teal-700: hsl(172, 94%, 26%);
   --teal-800: hsl(172, 98%, 20%);
   --teal-900: hsl(176, 100%, 13%);
+
+  --shadow-color: 214deg 37% 59%;
+
+  --shadow-elevation-high:
+    0px 0.3px 0.2px hsl(var(--shadow-color) / 0.64),
+    0px 0.4px 0.3px -0.7px hsl(var(--shadow-color) / 0.56),
+    0px 1.1px 0.8px -1.4px hsl(var(--shadow-color) / 0.48),
+    0px 2.9px 2.2px -2.1px hsl(var(--shadow-color) / 0.4),
+    0px 6.5px 4.9px -2.9px hsl(var(--shadow-color) / 0.32),
+    -0.1px 12.3px 9.2px -3.6px hsl(var(--shadow-color) / 0.24),
+    -0.1px 21px 15.8px -4.3px hsl(var(--shadow-color) / 0.16),
+    -0.2px 33.2px 24.9px -5px hsl(var(--shadow-color) / 0.08);
 }
