--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -1,34 +1,27 @@
+:root {
+  --primary-font: "Right Grotesk Wide Black", Inter, Roboto, sans-serif;
+}
+
 h1 {
   font-size: 4.052rem;
   font-weight: 900;
   letter-spacing: -1.8px;
+  font-family: var(--primary-font);
 
   @media (max-width: 992px) {
     font-size: 3.25rem;
   }
 
   @media (max-width: 450px) {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
   }
 }
-
-// h2 {
-//   font-size: 2.441rem;
-//   font-weight: 700;
-//   letter-spacing: -1px;
-// }
 
 h2 {
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: -0.1px;
 }
-
-// h3 {
-//   font-size: 1.953rem;
-//   font-weight: 700;
-//   letter-spacing: -1px;
-// }
 
 h3 {
   font-size: 1.563rem;
