--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,9 +1,23 @@
 .hero {
   display: flex;
   gap: 2rem;
+  position: relative;
 
   @media (max-width: 778px) {
     flex-direction: column;
+  }
+
+  &::after {
+    position: absolute;
+    z-index: -2;
+    top: 0;
+    left: 0;
+    width: 400px;
+    height: 200px;
+
+    content: "";
+    background-color: var(--blue-100);
+    filter: blur(90px);
   }
 
   &__main {
@@ -30,19 +44,6 @@
     @media (max-width: 778px) {
       align-items: center;
       text-align: center;
-    }
-
-    &::after {
-      position: absolute;
-      z-index: -2;
-      top: 0;
-      left: 0;
-      width: 400px;
-      height: 200px;
-
-      content: "";
-      background-color: var(--blue-100);
-      filter: blur(90px);
     }
 
     &--product {
@@ -95,7 +96,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 400px;
+    height: 300px;
   }
 
   &__minipod {
@@ -139,11 +140,12 @@
 
     &--featured {
       position: relative;
-      top: -4rem;
+      top: -1rem;
       transform: scale(.7);
 
       @media (max-width: 992px) {
-        top: -7rem;
+        top: -4rem;
+
         transform: scale(.5);
       }
     }
@@ -208,10 +210,10 @@
   }
 
   &__feature {
-    padding: 3rem 2rem 16rem;
+    padding: 3rem 2rem 2rem;
 
     @media (max-width: 992px) {
-      padding: 2rem 2rem 6rem;
+      padding: 2rem;
     }
 
     @media (max-width: 568px) {
@@ -277,7 +279,7 @@
 }
 
 .scroll {
-  --scroll-position: 680px;
+  --scroll-position: 600px;
 
   position: absolute;
   left: 50%;
