--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -74,7 +74,7 @@
 
   &--white {
     margin-bottom: -7.6rem;
-    background-color: var(--blue-50);
+    background-color: #fff;
   }
 
   &__container {
@@ -180,6 +180,7 @@
     }
 
     img {
+      aspect-ratio: 1.49;
       border-radius: 7px;
     }
   }
