--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -204,7 +204,7 @@
       gap: .5rem;
 
       &:hover {
-        background-color: var(--blue-50);
+        background-color: var(--blue-gray-50);
       }
 
       .btn__chevron {
