--- a/app/scss/sections/_home.scss
+++ b/app/scss/sections/_home.scss
@@ -162,6 +162,7 @@
     max-width: 1152px;
     max-height: 772px;
     transform: translateY(80px);
+    border-radius: 7px;
     box-shadow: 0 4px 96px rgba(9, 38, 73, .25);
 
     @media (max-width: 992px) {
