--- a/app/scss/components/_buttons.scss
+++ b/app/scss/components/_buttons.scss
@@ -101,14 +101,18 @@
   }
 
   &--form {
+    grid-column: span 6;
     font-size: 1rem;
     font-weight: 600;
     max-width: none;
     padding: 1rem 0;
     border: none;
     border-radius: 5px;
+    transition: background-color 100ms ease-in-out;
 
-    grid-column: 1/3;
+    &:hover {
+      background-color: var(--blue-300);
+    }
 
     @media (max-width: 568px) {
       grid-column: 1;
