--- a/app/scss/base/_colors.scss
+++ b/app/scss/base/_colors.scss
@@ -6,7 +6,7 @@
   --blue-200: hsl(206, 93%, 73%);
   --blue-300: hsl(208, 88%, 62%);
   --blue-400: hsl(210, 83%, 53%);
-  --blue-500: hsl(213, 75%, 54%);
+  --blue-500: rgb(50, 129, 226);
   --blue-600: hsl(214, 95%, 36%);
   --blue-700: hsl(215, 96%, 32%);
   --blue-800: hsl(216, 98%, 25%);
