--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -14,6 +14,7 @@ form {
 
   @media (max-width: 568px) {
     grid-template-columns: repeat(1, 1fr);
+    padding: 1rem;
   }
 }
 
@@ -155,9 +156,8 @@ textarea {
     display: inline-block;
     position: relative;
     width: 100%;
-    padding: 0.5rem 0;
+    padding: 0.7rem 0 0.6rem 2.2rem;
     font-size: 0.8rem;
-    text-align: center;
     background-color: white;
     color: var(--blue-gray-400);
 
@@ -167,7 +167,7 @@ textarea {
 
     @media (max-width: 450px) {
       font-size: 0.7rem;
-      padding-left: 0.5rem;
+      padding-left: 1.5rem;
     }
 
     &::after {
@@ -182,7 +182,7 @@ textarea {
       border-radius: 2px;
 
       @media (max-width: 450px) {
-        left: 9px;
+        left: 12px;
         width: 4px;
         height: 4px;
         border-radius: 1px;
@@ -201,7 +201,7 @@ textarea {
       border-radius: 4px;
 
       @media (max-width: 450px) {
-        left: 6px;
+        left: 9px;
         width: 10px;
         height: 10px;
         border-radius: 3px;
