added sass mixins for media breakpoints

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,6 +3,7 @@
 @use "base/typography";
 @use "base/fonts";
 @use "base/images";
+@use "base/breakpoints";
 @use "utils/spacing";
 @use "components/buttons";
 @use "components/minipod";
