--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -3,14 +3,14 @@
   gap: 2rem;
   position: relative;
 
-  @media (max-width: 778px) {
+  @media (max-width: 768px) {
     flex-direction: column;
   }
 
   &__main {
     padding: 3rem 2rem 4rem;
 
-    @media (max-width: 778px) {
+    @media (max-width: 768px) {
       flex-direction: column;
 
       padding: 2rem 2rem 28rem;
@@ -28,7 +28,7 @@
     flex-direction: column;
     gap: 1rem;
 
-    @media (max-width: 778px) {
+    @media (max-width: 768px) {
       align-items: center;
       text-align: center;
     }
@@ -44,7 +44,7 @@
     display: flex;
     align-items: flex-end;
 
-    @media (max-width: 778px) {
+    @media (max-width: 768px) {
       flex-direction: column;
       align-items: center;
       text-align: center;
@@ -56,7 +56,7 @@
     flex-direction: column;
     gap: 1rem;
 
-    @media (max-width: 778px) {
+    @media (max-width: 768px) {
       align-items: center;
       text-align: center;
     }
@@ -94,7 +94,7 @@
     height: 0;
     margin: 0 auto;
     padding: 0;
-    transform: scale(.6) translateX(-50%);
+    transform: scale(0.6) translateX(-50%);
     perspective: 1000px;
     --fan-tx: -175%;
 
@@ -104,36 +104,36 @@
 
     @media (max-width: 992px) {
       top: 5rem;
-      transform: scale(.45) translateX(-50%);
+      transform: scale(0.45) translateX(-50%);
     }
 
-    @media (max-width: 778px) {
+    @media (max-width: 768px) {
       top: 15rem;
-      transform: scale(.5) translateX(-50%);
+      transform: scale(0.5) translateX(-50%);
     }
 
     @media (max-width: 568px) {
-      transform: scale(.5) translateX(-50%);
+      transform: scale(0.5) translateX(-50%);
     }
 
     @media (max-width: 568px) {
       top: 17rem;
-      transform: scale(.5) translateX(-50%);
+      transform: scale(0.5) translateX(-50%);
     }
 
     @media (max-width: 375px) {
-      transform: scale(.4) translateX(-50%);
+      transform: scale(0.4) translateX(-50%);
     }
 
     &--featured {
       position: relative;
       top: -1rem;
-      transform: scale(.7);
+      transform: scale(0.7);
 
       @media (max-width: 992px) {
         top: -4rem;
 
-        transform: scale(.5);
+        transform: scale(0.5);
       }
     }
   }
@@ -143,7 +143,7 @@
     z-index: -1;
     top: 0;
     left: -260px;
-    transform: scale(.6);
+    transform: scale(0.6);
   }
 
   &__heading {
@@ -202,11 +202,11 @@
     }
 
     @media (max-width: 768px) {
-      transform: scale(.8) translate(-65%, -325px);
+      transform: scale(0.8) translate(-65%, -325px);
     }
 
     @media (max-width: 450px) {
-      transform: scale(.9) translate(-60%, -235px);
+      transform: scale(0.9) translate(-60%, -235px);
     }
   }
 
@@ -223,7 +223,7 @@
   }
 
   &__img {
-    filter: drop-shadow(0px 8px 12px rgba(0, 0, 0, .2));
+    filter: drop-shadow(0px 8px 12px rgba(0, 0, 0, 0.2));
 
     img {
       width: 250px;
@@ -257,7 +257,7 @@
   &__event {
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
     width: fit-content;
     padding: 5px 15px;
     transition: all 150ms ease-out;
@@ -268,7 +268,7 @@
     background-color: var(--blue-50);
 
     @media (max-width: 425px) {
-      gap: .3rem;
+      gap: 0.3rem;
     }
 
     &--disclaimer {
@@ -297,7 +297,7 @@
       top: calc(var(--scroll-position) - 100px);
     }
 
-    @media (max-width: 778px) {
+    @media (max-width: 768px) {
       top: calc(var(--scroll-position) + 300px);
     }
 
