--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -1,3 +1,5 @@
+@use "../base/breakpoints" as *;
+
 /**
  *
  * The .card-grid sets up a grid for the specifications
@@ -20,7 +22,7 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  @media (max-width: 768px) {
+  @include breakpoint(md-tablet) {
     margin: 0 auto 0;
     grid-template-columns: repeat(1, 1fr);
   }
@@ -37,11 +39,11 @@
   border: 1px solid var(--blue-200);
   border-radius: 10px;
   background-color: white;
-  box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, .09);
+  box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, 0.09);
 
   &:hover {
     border: 1px solid var(--blue-500);
-    box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, .13);
+    box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, 0.13);
   }
 }
 
@@ -53,11 +55,11 @@
   border: 1px solid var(--blue-200);
   border-radius: 7px;
   background-color: var(--blue-gray-50);
-  box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, .09);
+  box-shadow: 0 2px 12px 0 hsla(213, 78%, 16%, 0.09);
 
   &:hover {
     border: 1px solid var(--blue-500);
-    box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, .13);
+    box-shadow: 0 12px 32px 0 hsla(213, 78%, 16%, 0.13);
   }
 
   img {
@@ -66,7 +68,7 @@
   }
 
   h6 {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 
   &--deal {
@@ -170,7 +172,7 @@
       grid-column: 1/3;
     }
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       grid-column: 1/2;
     }
   }
@@ -183,16 +185,12 @@
     }
   }
 
-
-
-
-
   &__list-item {
-    font-size: .8rem;
+    font-size: 0.8rem;
 
     position: relative;
     padding-left: 2.5rem;
-    letter-spacing: -.1px;
+    letter-spacing: -0.1px;
     color: var(--blue-gray-600);
   }
 
