--- a/app/scss/components/_footer.scss
+++ b/app/scss/components/_footer.scss
@@ -1,3 +1,5 @@
+@use "../base/breakpoints" as *;
+
 .footer {
   background-color: var(--blue-900);
 
@@ -10,7 +12,7 @@
     font-size: 0.9rem;
     color: var(--blue-50);
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       max-width: fit-content;
     }
   }
@@ -25,7 +27,7 @@
     flex-direction: column;
     gap: 1rem;
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       gap: 0.5rem;
     }
   }
