--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -1,16 +1,18 @@
+@use "../base/breakpoints" as *;
+
 .hero {
   display: flex;
   gap: 2rem;
   position: relative;
 
-  @media (max-width: 768px) {
+  @include breakpoint(md-tablet) {
     flex-direction: column;
   }
 
   &__main {
     padding: 3rem 2rem 4rem;
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       flex-direction: column;
 
       padding: 2rem 2rem 28rem;
@@ -28,7 +30,7 @@
     flex-direction: column;
     gap: 1rem;
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       align-items: center;
       text-align: center;
     }
@@ -44,7 +46,7 @@
     display: flex;
     align-items: flex-end;
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       flex-direction: column;
       align-items: center;
       text-align: center;
@@ -56,7 +58,7 @@
     flex-direction: column;
     gap: 1rem;
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       align-items: center;
       text-align: center;
     }
@@ -107,7 +109,7 @@
       transform: scale(0.45) translateX(-50%);
     }
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       top: 15rem;
       transform: scale(0.5) translateX(-50%);
     }
@@ -201,7 +203,7 @@
       transform: scale(1.3) translate(-17%, -215px);
     }
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       transform: scale(0.8) translate(-65%, -325px);
     }
 
@@ -297,7 +299,7 @@
       top: calc(var(--scroll-position) - 100px);
     }
 
-    @media (max-width: 768px) {
+    @include breakpoint(md-tablet) {
       top: calc(var(--scroll-position) + 300px);
     }
 
