--- a/app/scss/components/_cards.scss
+++ b/app/scss/components/_cards.scss
@@ -17,7 +17,7 @@
   grid-column-gap: 30px;
   grid-row-gap: 30px;
 
-  @media (max-width: 992px) {
+  @include breakpoint(lg-tablet) {
     margin: 3rem auto 0;
     grid-template-columns: repeat(2, 1fr);
   }
@@ -166,7 +166,7 @@
     font-size: 1.3rem;
     order: 8;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       order: 9;
       padding: 1rem 0;
       grid-column: 1/3;
@@ -180,7 +180,7 @@
   &-9 {
     order: 9;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       order: 8;
     }
   }
