--- a/app/scss/components/_hero.scss
+++ b/app/scss/components/_hero.scss
@@ -74,7 +74,7 @@
     border-radius: 10px;
     box-shadow: var(--shadow-elevation-high);
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       width: 370px;
       height: 210px;
     }
@@ -104,7 +104,7 @@
       transform-style: preserve-3d;
     }
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       top: 5rem;
       transform: scale(0.45) translateX(-50%);
     }
@@ -132,7 +132,7 @@
       top: -1rem;
       transform: scale(0.7);
 
-      @media (max-width: 992px) {
+      @include breakpoint(lg-tablet) {
         top: -4rem;
 
         transform: scale(0.5);
@@ -164,7 +164,7 @@
     &--home {
       max-width: 55ch;
 
-      @media (max-width: 992px) {
+      @include breakpoint(lg-tablet) {
         max-width: 45ch;
       }
 
@@ -199,7 +199,7 @@
     position: absolute;
     transform: scale(1.5) translate(28px, -190px);
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       transform: scale(1.3) translate(-17%, -215px);
     }
 
@@ -215,7 +215,7 @@
   &__feature {
     padding: 3rem 2rem 2rem;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       padding: 2rem;
     }
 
@@ -230,7 +230,7 @@
     img {
       width: 250px;
 
-      @media (max-width: 992px) {
+      @include breakpoint(lg-tablet) {
         position: relative;
         left: 50%;
         transform: translateX(-50%);
@@ -295,7 +295,7 @@
   transform: translateX(-50%);
 
   &__home {
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       top: calc(var(--scroll-position) - 100px);
     }
 
@@ -319,7 +319,7 @@
   &__product {
     --scroll-position: 760px;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       top: calc(var(--scroll-position) - 160px);
     }
 
