--- a/app/scss/components/_minipod.scss
+++ b/app/scss/components/_minipod.scss
@@ -1,3 +1,5 @@
+@use "../base/breakpoints" as *;
+
 .minipod {
   &__heading {
     font-size: 2.441rem;
@@ -15,7 +17,7 @@
     position: relative;
     margin-top: 4rem;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       flex-direction: column;
     }
 
@@ -50,7 +52,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       grid-template-columns: 1fr;
       gap: 0;
 
@@ -65,7 +67,7 @@
       width: auto;
       height: auto;
 
-      @media (max-width: 992px) {
+      @include breakpoint(lg-tablet) {
         margin-top: 4rem;
         margin-bottom: -1rem;
         justify-self: center;
@@ -80,7 +82,7 @@
     &-6 {
       margin-top: -3rem;
 
-      @media (max-width: 992px) {
+      @include breakpoint(lg-tablet) {
         margin-top: 0;
       }
     }
@@ -89,7 +91,7 @@
       margin-top: -7rem;
       pointer-events: none;
 
-      @media (max-width: 992px) {
+      @include breakpoint(lg-tablet) {
         margin-top: 0;
       }
     }
@@ -198,7 +200,6 @@ i {
 }
 
 .spine {
-
   .side-1,
   .side-2,
   .side-3,
