--- a/app/scss/components/_nav.scss
+++ b/app/scss/components/_nav.scss
@@ -1,3 +1,5 @@
+@use "../base/breakpoints" as *;
+
 .navbar {
   position: relative;
   z-index: 99999;
@@ -28,7 +30,7 @@
     transition: opacity 300ms ease-in;
     pointer-events: none;
     opacity: 0;
-    background-color: hsla(213, 78%, 8%, .9);
+    background-color: hsla(213, 78%, 8%, 0.9);
 
     @media (min-width: 992px) {
       background-color: transparent;
@@ -44,7 +46,7 @@
       height: 40px;
     }
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       display: flex;
     }
   }
@@ -55,7 +57,7 @@
     align-items: center;
     gap: 1rem;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       position: absolute;
       z-index: 1;
       z-index: 1000;
@@ -68,7 +70,7 @@
       transition: opacity 300ms ease-in;
       pointer-events: none;
       opacity: 0;
-      background-color: hsla(0, 0%, 100%, .98);
+      background-color: hsla(0, 0%, 100%, 0.98);
       gap: 3rem;
       backdrop-filter: blur(5px);
     }
@@ -85,7 +87,7 @@
   }
 
   &__link {
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     color: var(--blue-900);
 
@@ -108,16 +110,16 @@
     .line {
       width: 100%;
       height: 2px;
-      transition: transform 500ms cubic-bezier(.68, -.6, .32, 1.6);
+      transition: transform 500ms cubic-bezier(0.68, -0.6, 0.32, 1.6);
       transform-origin: left;
       background-color: var(--blue-gray-400);
     }
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: .3rem;
+      gap: 0.3rem;
     }
 
     &[aria-expanded="true"] {
@@ -145,7 +147,7 @@
     }
 
     &__chevron {
-      margin-left: .3rem;
+      margin-left: 0.3rem;
       transition: all 150ms ease-out;
       transform-origin: 25% 50%;
       stroke: var(--blue-900);
@@ -166,7 +168,7 @@
       display: flex;
       flex-direction: column;
       width: max-content;
-      gap: .5rem;
+      gap: 0.5rem;
     }
 
     &__menu {
@@ -179,7 +181,7 @@
       transform: translateX(-50%);
       border-radius: 10px;
       background-color: white;
-      box-shadow: 0 0 24px 0 hsla(213, 78%, 16%, .15);
+      box-shadow: 0 0 24px 0 hsla(213, 78%, 16%, 0.15);
 
       &::before {
         position: absolute;
@@ -201,7 +203,7 @@
       padding: 20px;
       cursor: pointer;
       border-radius: 10px;
-      gap: .5rem;
+      gap: 0.5rem;
 
       &:hover {
         background-color: var(--blue-gray-50);
@@ -248,7 +250,7 @@
   z-index: 9999;
   top: 0;
   max-width: 100%;
-  padding: .75rem 2rem;
+  padding: 0.75rem 2rem;
   background: var(--blue-gray-50);
   backdrop-filter: blur(5px);
 
@@ -260,7 +262,7 @@
     margin: 0 auto;
     transition: padding 150ms ease-in;
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       justify-content: center;
     }
   }
@@ -269,22 +271,22 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: .25rem .5rem;
-    gap: .75rem;
+    padding: 0.25rem 0.5rem;
+    gap: 0.75rem;
 
     @media (max-width: 568px) {
-      gap: .25rem;
+      gap: 0.25rem;
     }
   }
 
   &__link {
-    font-size: .8rem;
-    padding: .25rem .5rem;
+    font-size: 0.8rem;
+    padding: 0.25rem 0.5rem;
     vertical-align: middle;
     color: var(--blue-900);
 
     @media (max-width: 568px) {
-      font-size: .7rem;
+      font-size: 0.7rem;
     }
 
     &--active {
