--- a/app/scss/sections/_merch.scss
+++ b/app/scss/sections/_merch.scss
@@ -1,10 +1,12 @@
+@use "../base/breakpoints" as *;
+
 .merch {
   &__grid {
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(3, 1fr);
 
-    @media (max-width: 992px) {
+    @include breakpoint(lg-tablet) {
       grid-template-columns: repeat(2, 1fr);
     }
 
