--- a/app/scss/utils/_spacing.scss
+++ b/app/scss/utils/_spacing.scss
@@ -1,9 +1,11 @@
+@use "../base/breakpoints" as *;
+
 .container {
   max-width: 1080px;
   margin: 0 auto;
   padding: 6rem 2rem;
 
-  @media (max-width: 992px) {
+  @include breakpoint(lg-tablet) {
     padding: 4rem 2rem;
   }
 
