--- a/app/scss/utils/_utilities.scss
+++ b/app/scss/utils/_utilities.scss
@@ -1,4 +1,9 @@
-// Accessibility
+@use "../base/breakpoints" as *;
+
+/* 
+The class below is for elements that
+are visible to screen readers only 
+*/
 
 .sr-only {
   position: absolute;
@@ -20,7 +25,7 @@
 }
 
 .desktop {
-  @media (max-width: 992px) {
+  @include breakpoint(lg-tablet) {
     display: none;
   }
 }
